create a submit buttom

--- a/hover.html
+++ b/hover.html
@@ -127,7 +127,11 @@
     <!-- Footer with registration link -->
     <footer>
         <div class="register">
-            <a href="file:///C:/Users/wilfr/Desktop/homework/project%20car%20rental/form.html">Click here to register:</a> 
+            <a href="file:///C:/Users/wilfr/Desktop/homework/project%20car%20rental/form.html">Click here to register:
+           
+                <input type="submit" value="Submit">
+           
+        </a> 
         </div>
     </footer>
 
