fix the css logo

--- a/hover.html
+++ b/hover.html
@@ -127,11 +127,7 @@
     <!-- Footer with registration link -->
     <footer>
         <div class="register">
-            <a href="file:///C:/Users/wilfr/Desktop/homework/project%20car%20rental/form.html">Click here to register:
-           
-                <input type="submit" value="Submit">
-           
-        </a> 
+            <a href="file:///C:/Users/wilfr/Desktop/homework/project%20car%20rental/form.html">Click here to register:  </a> 
         </div>
     </footer>
 
