add image payment

--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
         <div class="footer-section">
             <h4>Payment Methods</h4>
             <ul>
-                <li><img src="images/visa.png" alt="Visa"></li>
-                <li><img src="images/mastercard.png" alt="MasterCard"></li>
-                <li><img src="images/paypal.png" alt="PayPal"></li>
-                <li><img src="images/amex.png" alt="American Express"></li>
+                <li><img src="https://i.pinimg.com/736x/0b/08/7c/0b087c9ad51a5c0a3afd57a05ebe4bee.jpg" alt="Visa"></li>
+                <li><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/MasterCard_Logo.svg/1280px-MasterCard_Logo.svg.png" alt="MasterCard"></li>
+                <li><img src="https://w7.pngwing.com/pngs/136/293/png-transparent-paypal-logo-thumbnail.png" alt="PayPal"></li>
+                <li><img src="https://e7.pngegg.com/pngimages/669/34/png-clipart-american-express-logo-american-express-payment-credit-card-membership-rewards-money-credit-card-blue-text-thumbnail.png" alt="American Express"></li>
             </ul>
         </div>
         <div class="footer-section">
@@ -113,10 +113,10 @@
         <div class="footer-section">
             <h4>Language</h4>
             <ul>
-                <li><a href="#">English</a></li>
-                <li><a href="#">Spanish</a></li>
-                <li><a href="#">French</a></li>
-                <li><a href="#">German</a></li>
+              <li><a href="?lang=en" lang="en">English</a></li>
+              <li><a href="?lang=es" lang="es">Spanish</a></li>
+              <li><a href="?lang=fr" lang="fr">French</a></li>
+              <li><a href="?lang=de" lang="de">German</a></li>
             </ul>
         </div>
         <div class="footer-section">
