add policy pages

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         <div class="footer-section">
             <h4>Customer Service</h4>
             <ul>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">FAQs</a></li>
-                <li><a href="#">Returns</a></li>
+                <li><a href="contact-us.html">Contact Us</a></li>
+                <li><a href="">FAQs</a></li>
+                <li><a href="returns.html">Returns</a></li>
             </ul>
         </div>
         <div class="footer-section">
