--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <h4>Customer Service</h4>
             <ul>
                 <li><a href="contact-us.html">Contact Us</a></li>
-                <li><a href="">FAQs</a></li>
+                <li><a href="faqs.html">FAQs</a></li>
                 <li><a href="returns.html">Returns</a></li>
             </ul>
         </div>
