add a target="_blank" for every page

--- a/index.html
+++ b/index.html
@@ -122,33 +122,33 @@
         <div class="footer-section">
             <h4>Best Sellers</h4>
             <ul>
-                <li><a href="#">Top Selling Cars</a></li>
-                <li><a href="#">Customer Favorites</a></li>
-                <li><a href="#">Featured Deals</a></li>
+                <li><a target="_blank" href="#">Top Selling Cars</a></li>
+                <li><a target="_blank" href="#">Customer Favorites</a></li>
+                <li><a target="_blank" href="#">Featured Deals</a></li>
             </ul>
         </div>
         <div class="footer-section">
             <h4>Customer Service</h4>
             <ul>
-                <li><a href="contact-us.html">Contact Us</a></li>
-                <li><a href="faqs.html">FAQs</a></li>
-                <li><a href="returns.html">Returns</a></li>
+                <li><a target="_blank" href="contact-us.html">Contact Us</a></li>
+                <li><a target="_blank" href="faqs.html">FAQs</a></li>
+                <li><a target="_blank" href="returns.html">Returns</a></li>
             </ul>
         </div>
         <div class="footer-section">
             <h4>Legal Support</h4>
             <ul>
-                <li><a href="#">Terms of Service</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Disclaimer</a></li>
+                <li><a target="_blank" href="#">Terms of Service</a></li>
+                <li><a target="_blank" href="#">Privacy Policy</a></li>
+                <li><a target="_blank" href="#">Disclaimer</a></li>
             </ul>
         </div>
         <div class="footer-section">
             <h4>Collection</h4>
             <ul>
-                <li><a href="#">New Arrivals</a></li>
-                <li><a href="#">Latest Models</a></li>
-                <li><a href="#">Special Offers</a></li>
+                <li><a target="_blank" href="#">New Arrivals</a></li>
+                <li><a target="_blank" href="#">Latest Models</a></li>
+                <li><a target="_blank" href="#">Special Offers</a></li>
             </ul>
         </div>
     </div>
