--- a/hover.html
+++ b/hover.html
@@ -22,7 +22,7 @@
     <div class="nav-bar">
       <div class="logo">
         <img src="logo2.png" alt="Car logo">
-        <a href="index.html">M&W CAR<span>.</span></a>
+        <a href="index.html">M&W CAR<span>back</span></a>
       </div>
       <div class="menu">
         <ul>
@@ -124,12 +124,17 @@
   </div>
 </section>
 
-    <!-- Footer with registration link -->
-    <footer>
-        <div class="register"> 
-            <a href="file:///C:/Users/wilfr/Desktop/homework/project%20car%20rental/form.html">Click here to register:</a> 
-        </div>
-    </footer>
+<footer>
+  <div class="footer-container">
+      
+      
+      <!-- Buy Now Button -->
+      <div class="buy-now-section">
+          <a href="purchase.html" class="buy-now-btn">Order Now</a>
+      </div>
+  </div>
+</footer>
+
 </body>
 
 </html>
