--- a/contact-us.html
+++ b/contact-us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Car Dealership</title>
-    <link rel="stylesheet" href="styles/contact-us.css">
+    <link rel="stylesheet" href="contact-us.css">
 </head>
 <body>
 
