--- a/form.html
+++ b/form.html
@@ -1,56 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Dealer Subscription Form</title>
     <link rel="stylesheet" href="for.css">
 </head>
+
 <body>
-    <div class="form-container">
-        <h1>Subscribe to Our Newsletter</h1>
-        <form action="#" method="post">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="phone">Phone:</label>
-            <input type="tel" id="phone" name="phone" required>
-
-            <label for="car-preference">Preferred Car:</label>
-            <select id="car-preference" name="car-preference">
-                <option value="" disabled selected>Select your car</option>
-                <option value="sedan">Sedan</option>
-                <option value="suv">SUV</option>
-                <option value="truck">Truck</option>
-                <option value="coupe">Coupe</option>
-            </select>
-
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="4"></textarea>
-
-            <button type="submit">Subscribe</button>
-           
-        </form> 
-        <div class="main menu">
-       <a href="file:///C:/Users/wilfr/Desktop/homework/project%20car%20rental/index.html#">Back to Main Menu</a>    
-         </div> 
+    <div class="slideshow-container">
+        <div class="slide slide1"></div>
+        <div class="slide slide2"></div>
+        <div class="slide slide3"></div>
     </div>
-    <div class="scrolling-container">
-        <div class="scrolling-content">
-          <div class="item" >Lamborghini</div>
-          <div class="item">Bugatti</div>
-          <div class="item">Ferrari</div>
-          <div class="item">Mercedes</div>
-          <div class="item">Tesla</div>
-          <div class="item">Volvo</div>
-          <div class="item">Chevrolet</div>
-          <div class="item">Toyota</div>
-          <div class="item">Honda</div>
-          <div class="item">Morano</div>
+    <section class="1">
+        <div class="form-container">
+            <h1>Subscribe to Our Newsletter</h1>
+            <form action="#" method="post">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="phone">Phone:</label>
+                <input type="tel" id="phone" name="phone" required>
+
+                <label for="car-preference">Preferred Car:</label>
+                <select id="car-preference" name="car-preference">
+                    <option value="" disabled selected>Select your car</option>
+                    <option value="sedan">Lamborghini</option>
+                    <option value="suv">Bugatti</option>
+                    <option value="truck">Ferrari</option>
+                    <option value="coupe">Mercedes</option>
+                    <option value="sedan">Tesla</option>
+                    <option value="suv">Volvo</option>
+                    <option value="truck">Chevrolet</option>
+                    <option value="coupe">Toyota</option>
+                </select>
+
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="4" width="4px" ></textarea>
+
+                <button type="submit">Subscribe</button>
+
+            </form>
         </div>
-      </div>
+    </section>
+
+    <section class="2">
+        <div class="scrolling-container">
+            <div class="scrolling-content">
+                <div class="item">Lamborghini</div>
+                <div class="item">Bugatti</div>
+                <div class="item">Ferrari</div>
+                <div class="item">Mercedes</div>
+                <div class="item">Tesla</div>
+                <div class="item">Volvo</div>
+                <div class="item">Chevrolet</div>
+                <div class="item">Toyota</div>
+                <div class="item">Honda</div>
+                <div class="item">Morano</div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="content">
+            <h1>It's a pleasure to assist you, thank you for visite. </h1>
+            <a href="file:///C:/Users/wilfr/Desktop/project%20car%20rental/index.html">
+                <h2>Back to the Home page</h2>.
+            </a>
+        </div>
+
+        <footer class="footer">
+            <p>&copy; 2024 M&W Dealer Car. All Rights Reserved.</p>
+        </footer>
+
+        <!-- <footer class="footer">
+        <div class="back menu">
+            <a href="file:///C:/Users/wilfr/Desktop/project%20car%20rental/index.html">Back to Main Menu</a>    
+              </div> 
+      </footer> -->
+    </section>
 </body>
+
 </html>
