--- a/returns.html
+++ b/returns.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Returns - Car Dealership</title>
-    <link rel="stylesheet" href="styles/returns.css">
+    <link rel="stylesheet" href="returns.css">
 </head>
 <body>
 
